// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandItemButton <CommandItemButton /> renders correctly 1`] = `
<Icon
  className=""
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconElement": undefined,
        }
      }
    />
  }
  isActive={false}
  key="command"
  onClick={[Function]}
  title="tests.label"
/>
`;

exports[`ToolButton <ToolButton /> renders correctly 1`] = `
<Icon
  className=""
  icon={
    <Icon
      iconInfo={
        Object {
          "iconClass": "icon-placeholder",
          "iconElement": undefined,
        }
      }
    />
  }
  isActive={false}
  key="tool1"
  onClick={[Function]}
/>
`;
